--- a/client/nav.jade
+++ b/client/nav.jade
@@ -6,7 +6,7 @@ template(name='nav')
             //-     i.large.sidebar.icon
             if is_loading
                 .icon.item
-                    i.big.loading.yin.yang.icon
+                    i.big.grey.loading.yin.yang.icon
             else
                 a.item.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
                     //- i.sitemap.large.icon
