--- a/client/building.jade
+++ b/client/building.jade
@@ -13,30 +13,36 @@ template(name='buildings')
                 
 template(name='building')
     .ui.padded.stackable.grid
-        .ui.three.wide.column
-            a.ui.big.button(href="/buildings")
-                i.chevron.left.icon
-                i.building.icon
-                //- +i name='apartment' classes='ui inline mini image'
-                |buildings
-            if is_dev
-                .ui.icon.input
-                    i.home.icon
-                    input.unit_number(type='number' placeholder='unit number')
-                .ui.icon.input
-                    i.building.icon
-                    input.building_number(type='number' placeholder='unit building number')
-                .ui.icon.input
-                    i.header.icon
-                    input.building_label(type='text' placeholder='unit building label')
-
-            h1.ui.header building #{building.building_code}
-            each building.building_numbers
-                .ui.basic.label #{this}
-        .ui.thirteen.wide.column
-            .ui.three.cards
-                each units
-                    +unit_card
+        .row
+            .sixteen.wide.column
+                a.ui.big.button(href="/buildings")
+                    i.chevron.left.icon
+                    //- i.building.icon
+                    +i name='apartment' classes='ui inline mini image'
+                    |buildings
+                if is_dev
+                    .ui.icon.input
+                        //- i.home.icon
+                        +i name='home' classes='ui inline mini image'
+                        input.unit_number(type='number' placeholder='unit number')
+                    .ui.icon.input
+                        //- i.building.icon
+                        +i name='building' classes='ui inline mini image'
+                        input.building_number(type='number' placeholder='unit building number')
+                    .ui.icon.input
+                        //- i.header.icon
+                        +i name='building' classes='ui inline mini image'
+                        input.building_label(type='text' placeholder='unit building label')
+                .ui.large.inline.header 
+                    small building
+                    strong #{building.building_code}
+                each building.building_numbers
+                    .ui.basic.large.label #{this}
+        .row
+            .ui.sixteen.wide.column
+                .ui.three.cards
+                    each units
+                        +unit_card
 
     
 template(name='unit_card')
@@ -48,20 +54,24 @@ template(name='unit_card')
             //- a.ui.large.button(href="/unit/#{_id}")
             //-     i.yellow.right.chevron.icon
             div
-            //- +i name='rent'
-            i.dollar.icon
+            +i name='rent'
+            //- i.dollar.icon
             each owners
-                .ui.basic.label
-                    if image_id
-                        img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
+                .ui.basic.big.label
+                    if kiosk_photo
+                        img.ui.avatar.image(src="{{c.url kiosk_photo width=200 height=200 gravity='face' crop='fill'}}")
+                    else if image_id
+                        img.ui.avatar.image(src="{{c.url image_id width=200 height=200 gravity='face' crop='fill'}}")
                     |#{first_name} #{last_name}
             div
-            i.home.icon
-            //- +i name='home'
+            //- i.home.icon
+            +i name='home'
             each residents
-                .ui.basic.label
-                    if image_id
-                        img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
+                .ui.basic.big.label
+                    if kiosk_photo
+                        img.ui.avatar.image(src="{{c.url kiosk_photo width=200 height=200 gravity='face' crop='fill'}}")
+                    else if image_id
+                        img.ui.avatar.image(src="{{c.url image_id width=200 height=200 gravity='face' crop='fill'}}")
                     |#{first_name} #{last_name}
             div
             //- if is_springdale
