--- a/client/front.jade
+++ b/client/front.jade
@@ -1,19 +1,12 @@
 template(name='healthclub_status')
-    .ui.basic.segment
-        .ui.inline.header
-            |Upper Hot Tub
+    .ui.inline.header Upper Hot Tub
         +water_status slug='upper_hot_tub'
-        div
-        .ui.inline.header
-            |Lower Hot Tub
+    .ui.inline.header Lower Hot Tub
         +water_status slug='lower_hot_tub'
-        //- .ui.grey.inline.header
-        div
-        .ui.inline.header
-            |Pool
+    .ui.inline.header Pool
         +water_status slug='pool'
-        //- .ui.grey.inline.header
-        //-     |80.1°
+    //- .ui.grey.inline.header
+    //-     |80.1°
 
 
 template(name='water_status')
