--- a/components/maintenance/healthclub.jade
+++ b/components/maintenance/healthclub.jade
@@ -7,57 +7,62 @@ template(name='healthclub')
     img.ui.fluid.image.checkin_banner(src="{{c.url 'grfront' width=1000 height=1000 crop='crop'}}")
     .ui.grid.header-wrapper.global_container
         //- +Template.dynamic template=kiosk_view
-        .row
-            .sixteen.wide.center.aligned.column
-                if is_staff
-                    a.ui.compact.button(href='/staff')
-                        i.left.chevron.icon
-                        +i name='user-shield' classes='ui inline image'
-                        |staff
-                img.ui.circular.centered.small.inline.image.shadowed(src="{{c.url 'gold_run_logo' }}")
+        //- .row
+        //-     .sixteen.wide.center.aligned.column
+        //-         img.ui.circular.centered.small.inline.image.shadowed(src="{{c.url 'gold_run_logo' }}")
         .row
             .sixteen.wide.column
                 .row
                     .ui.massive.fluid.icon.input
-                        input.username_search(type='text' placeholder='resident first or last name...' autofocus)
+                        input.username_search(type='text' placeholder='check in resident' autofocus)
                         if is_query
                             i.remove.link.icon.clear_results
                         //- else 
                         //-     i.user.grey.outline.icon
-                    .ui.center.aligned.basic.segment.test
-                        if checkedout_members.length
+                    if checkedout_members.length
+                        .ui.center.aligned.basic.segment.test
                             each checkedout_members
                                 +checkin_button
-                        else
-                            if checking_in
+                    else
+                        if checking_in
+                            .ui.center.aligned.basic.segment.test
                                 if is_query
                                     .ui.center.aligned.header No members found
                                     .ui.center.aligned.header See staff to add
                 .ui.padded.grid
                     .two.column.row
                         .column
+                            with latest_movie
+                                .movie_image(title='pavilion at 6:30')
+                                    +image_view key='image_id' direct=true
+                                .ui.small.center.aligned.header monday @ 6:30 in the pavilion    
                             +inline_doc slug='health_club_notices' classes='ui large header'
+                            div
                             +health_club_info
                         .column
+                            .ui.header Health Club Hours
                             .ui.grid
                                 .row
                                     .eight.wide.column
-                                        .ui.header Hours
                                         .ui.large.list
                                             .item Mon 7a-10p
                                             .item Tues 7a-10p
                                             .item Wed 7a-10p
                                             .item Thur 7a-10p
                                     .eight.wide.column
-                                        .ui.hidde.divider 
-                                        .three.wide.column
+                                        //- .ui.hidden.divider 
+                                        //- .three.wide.column
                                         .ui.large.list
                                             .item Fri 7a-9p
                                             .item Sat 8a-9p
                                             .item Sun 8a-10p
-                                .row
-                                    +healthclub_status
-                            
+                            +healthclub_status
+                            if is_staff
+                                a.ui.compact.button(href='/staff')
+                                    i.left.chevron.icon
+                                    +i name='user-shield' classes='ui inline image'
+                                    |staff
+
 
 template(name='facet_doc_edit')
     with facet_doc
@@ -109,7 +114,7 @@ template(name='checkin_button')
     unless is_staff
         //- unless healthclub_checkedin
         .ui.massive.basic.button.checkin.new_hc_session
-            h2 #{first_name} #{last_name}
+            strong #{first_initial} #{last_name}
         //- if healthclub_checkedin
         //- if is_staff
         //- else
@@ -124,11 +129,13 @@ template(name='checkin_button')
                 //- +i name='exit-sign' classes='ui avatar image'
                 |health club check out
         else
-            .ui.massive.fade.animated.button.new_hc_session
+            .ui.massive.fade.animated.button.new_hc_session(title='sign in')
                 .visible.content
-                    strong #{first_name} #{last_name}
+                    strong #{first_initial} #{last_name}
                 .hidden.content
-                    |check in
+                    i.sign.in.alternate.icon
+                    //- +i name='internal' classes='ui inline mini image'
+                    //- |check in
 
 
 template(name='health_club_info')
