--- a/components/maintenance/staff.jade
+++ b/components/maintenance/staff.jade
@@ -2,42 +2,47 @@ template(name='staff')
     .ui.stackable.padded.grid
         .row
             .four.wide.column
-                .ui.grey.large.header 
-                    //- i.user.shield.icon
-                    +i name='user-shield'
-                    |staff
+                //- .ui.grey.large.header 
+                //-     //- i.user.shield.icon
+                //-     +i name='user-shield'
+                //-     |staff
                 //- i.massive.loading.brown.poo.icon
-                a.ui.large.fluid.basic.button(href='/add_resident')
+                a.ui.large.compact.fluid.basic.button(href='/add_resident')
                     //- i.user.add.large.icon
-                    +i name='add-user-male' classes='ui inline mini image'
-                    strong add resident
-                .ui.header
-                    |#{checkedin_members.count} checked in members
+                    +i name='plus' classes='ui inline mini image'
+                    strong
+                        |resident
+                //- .ui.header
+                //-     |#{checkedin_members.count} checked in members
                 //- +inline_doc slug='staff_notices' classes='ui small grey header'
                 //- +add_button model='work_order' label='work order'
                 //- +add_button model='communication' label='communication'
-                .ui.large.fluid.button.log_staff_walked
+                .ui.big.compact.fluid.button.log_staff_walked
                     +i name='walking' classes='ui inline image'                
                     |log hourly shift walk
                 //- +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
                 //- +add_button model='front_desk_opening_closing_checklist' label='opening/closing checklist'
                 //- +unit_key_widget
-                .ui.header your shift walks
-                each shift_walks
-                    .ui.small.header #{when}
-                        i.remove.link.icon.remove_walk(title='remove walk entry')
+                .ui.header 
+                    +i name='walking' classes='ui inline image'                
+                    |your shift walks
+                .ui.basic.segment
+                    each shift_walks
+                        .ui.header #{when}
+                            i.remove.small.link.circular.icon.remove_walk(title='remove walk entry')
                 if checklist_completed
-                    i.big.green.checkmark.icon
-                    |checklist completed
+                    +i name='todo-list' classes='ui inline image'
+                    //- i.big.green.checkmark.icon
+                    |shift checklist completed
                 else 
                     a.ui.fluid.big.button(href='/shift_checklist')
-                        i.tasks.icon
+                        +i name='to-do' classes='ui inline mini image'
                         |checklist not completed
             .twelve.wide.column
-                .ui.styled.fluid.large.accordion
+                .ui.fluid.accordion
                     .active.title
                         +i name='groups' classes='ui inline image'
-                        |checked in members
+                        .ui.inline.header #{checkedin_members.count} checked in members
                         i.dropdown.icon
                     .active.content
                         .ui.stackable.four.cards
@@ -368,30 +373,33 @@ template(name='request_row')
 template(name='shift_checklist')
     .ui.stackable.padded.grid
         .row
-            .ui.four.wide.column
+            .ui.sixteen.wide.center.aligned.column
                 .ui.header 
                     +i name='tasks'
                     |staff checklist for #{today}
-            .ui.twelve.wide.column
+            .ui.sixteen.wide.column
                 if todays_checklist
                     with todays_checklist
                         each checklist_items
-                            .ui.segment.stackable.grid
+                            .ui.basic.segment.stackable.grid
                                 .eight.wide.column
                                     .ui.header #{title}
+                                    if completed
+                                        .ui.small.header {{long_date completed_time}}
                                 .eight.wide.column
                                     unless completed
                                         .ui.big.fluid.button.complete mark complete
                                     else
                                         .ui.big.fluid.green.fade.animated.button.incomplete
                                             .visible.content
-                                                |complete
+                                                i.large.checkmark.icon
                                             .hidden.content
-                                                |mark incomplete
-                                        .ui.tiny.header {{long_date completed_time}}
+                                                i.large.ban.icon
+                                                //- +i name='cancel' classes='ui inline image'
+                                                //- |mark incomplete
                         if all_completed
                             .ui.fluid.big.button.submit_checklist
-                                i.checkmark.icon
+                                +i name='checkmark' classes='ui inline image'
                                 |submit
                 else
                     .ui.large.button.create_checklist
